# polaris-sms-api

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODEOWNERS  Dockerfile  Makefile  README.md  pyproject.toml  run_local.sh  tox.ini
.circleci/: config.yml  dhos-sms-api.tml  run_integration_tests.sh
.infra/: install-upgrade-az-uk-dev.sh  install-upgrade-az-uk-nonprod.sh  install-upgrade-az-uk-prod.sh
.infra/helm-chart/dhos-sms-api/: Chart.yaml  encrypt-az-uk-dev-secrets.sh  encrypt-az-uk-nonprod-secrets.sh  encrypt-az-uk-prod-secrets.sh  values-az-uk-dev-upstream-api001-secrets-sops.yaml  values-az-uk-dev-upstream-api001.yaml  values-az-uk-nonprod-upstream-api001-secrets-sops.yaml  values-az-uk-nonprod-upstream-api001.yaml  values-az-uk-prod006-secrets-sops.yaml  values-az-uk-prod006.yaml  values-az-us-dev-upstream-api001.yaml  (+6 more)
dhos_sms_api/: app.py  config.py
dhos_sms_api/blueprint_api/: __init__.py  controller.py
dhos_sms_api/blueprint_development/: __init__.py  controller.py
dhos_sms_api/helpers/: cli.py  twilio_client.py
dhos_sms_api/models/: api_spec.py  message.py
dhos_sms_api/openapi/: openapi.yaml
dhos_sms_api/query/: softdelete.py
docs/: make_schema.py  schema.dot  schema.plantuml
integration-tests/: README.md  docker-compose.yml  environment.py  reporting.py  requirements.txt
integration-tests/clients/: database_client.py  sms_message_client.py
integration-tests/features/: sms.feature
integration-tests/helpers/: sms_message.py
integration-tests/steps/: sms_message_steps.py
migrations/: env.py
migrations/versions/: 2202bf56078c_.py  28bdc244fe69_.py  2d01a355c380_add_created_index.py  2d8ea21b1aa6_add_trustomer_product_fields.py  3551a2541495_redacted_column.py  3c8ba8adfa5c_.py  745ca8284c1e_create_modified.py  df31da1209da_dbm_product.py  f5c5ab61577c_.py
tests/: conftest.py  test_api.py  test_controller.py  test_openapi.py  test_twilio_client.py
(+7 files in other folders)
